Actualización de swagger con todos los métodos
